Finished a basic draft of the content that summarizes the deliverables.

--- a/labs/lab2/cs440S2014-lab2.tex
+++ b/labs/lab2/cs440S2014-lab2.tex
@@ -41,19 +41,21 @@ are as generalizable as is possible. That is, for the purposes of this assignmen
 structures that contain hundreds, or even thousands, of files. You should also use your tool to determine the size of an empty
 file on the file system and the size of the Java program that you wrote to perform the traversal.
 
+The results from your experimental study should be provided in a written report that uses graphs and tables of data for
+summarization purposes. Whenever possible, your report should explain how your results may influence the design and implementation
+of future file systems.
+
 \section*{Summary of the Required Deliverables}
 
   This assignment invites you to submit printed and signed versions of the following deliverables: 
 
   \begin{enumerate}
-    \item 
+    \item The source code of the file system traversal tool that you implemented in the Java language
+    \item The output of the file system traversal tool when run on several small file system regions
+    \item The report from an experimental study that characterizes the use of the Linux file system
   \end{enumerate}
 
-  It is recognized that not all of the students in the class may be familiar with the Git version control system and thus have some
-  difficulty using and configuring the git plugin for Zsh.  Students who do not have access to a Git repository should see the
-  instructor so that one can be made available to them for the purposes of completing this assignment. However, please note that you
-  are not required to extensively use a Git repository to complete this assignment. Finally, students are strongly encouraged to
-  write their laboratory report in \LaTeX.
+  Finally, students are strongly encouraged to write their laboratory report in \LaTeX.
 
   In adherence to the honor code, students should complete this assignment on an individual basis. While it is appropriate for
   students in this class to have high-level conversations about the assignment, it is necessary to distinguish carefully between the
