Revised version before making all of the marked changes.

--- a/labs/lab2/cs440S2014-lab2.tex
+++ b/labs/lab2/cs440S2014-lab2.tex
@@ -55,7 +55,9 @@ of future file systems.
     \item The report from an experimental study that characterizes the use of the Linux file system
   \end{enumerate}
 
-  Finally, students are strongly encouraged to write their laboratory report in \LaTeX.
+  Students are strongly encouraged to write their laboratory report in \LaTeX~and use tools such as the R language for statistical
+  computation and the Graphviz tool to better view and understand the empirical results. Please see the instructor if you have
+  questions about these deliverables.
 
   In adherence to the honor code, students should complete this assignment on an individual basis. While it is appropriate for
   students in this class to have high-level conversations about the assignment, it is necessary to distinguish carefully between the
