Finished all of the changes in the first paragraph of lab assignment 2.

--- a/labs/lab2/cs440S2014-lab2.tex
+++ b/labs/lab2/cs440S2014-lab2.tex
@@ -9,12 +9,12 @@
 \MYHEADERS{Laboratory Assignment Two}{Due: February 10, 2014}
 
 \section*{Introduction}
-  
+
 The file system is one of the most heavily used components of an operating system.  Figure~1-14 in your textbook shows a
-visualization of a file system that starts at the root directory and branches out to individual files.  The Java programming
-language --- and many other languages as well --- provide libraries that support the traversal of a file system and the analysis
-of files. In this laboratory assignment, you will implement your own file system traversal tool and use it to learn more about
-characteristics of the file system used by the Linux operating system.
+visualization of a file system that starts at the root directory and branches out to additional directories and files.
+Programming languages like Java and C provide libraries that support the traversal of a file system and the analysis of individual
+files and directories. In this laboratory assignment, you will implement your own file system traversal tool and use it to learn
+more about the characteristics of the file system used by the Linux operating system.
 
 \section*{File System Traversal}
 
@@ -47,23 +47,23 @@ of future file systems.
 
 \section*{Summary of the Required Deliverables}
 
-  This assignment invites you to submit printed and signed versions of the following deliverables: 
+This assignment invites you to submit printed and signed versions of the following deliverables: 
 
-  \begin{enumerate}
-    \item The source code of the file system traversal tool that you implemented in the Java language
-    \item The output of the file system traversal tool when run on several small file system regions
-    \item The report from an experimental study that characterizes the use of the Linux file system
-  \end{enumerate}
+\begin{enumerate}
+  \item The source code of the file system traversal tool that you implemented in the Java language
+  \item The output of the file system traversal tool when run on several small file system regions
+  \item The report from an experimental study that characterizes the use of the Linux file system
+\end{enumerate}
 
-  Students are strongly encouraged to write their laboratory report in \LaTeX~and use tools such as the R language for statistical
-  computation and the Graphviz tool to better view and understand the empirical results. Please see the instructor if you have
-  questions about these deliverables.
+Students are strongly encouraged to write their laboratory report in \LaTeX~and use tools such as the R language for statistical
+computation and the Graphviz tool to better view and understand the empirical results. Please see the instructor if you have
+questions about these deliverables.
 
-  In adherence to the honor code, students should complete this assignment on an individual basis. While it is appropriate for
-  students in this class to have high-level conversations about the assignment, it is necessary to distinguish carefully between the
-  student who discusses the principles underlying a problem with others and the student who produces assignments that are identical
-  to, or merely variations on, someone else's work.  As such, deliverables that are nearly identical to the work of others will be
-  taken as evidence of violating the \mbox{Honor Code}.  
+In adherence to the honor code, students should complete this assignment on an individual basis. While it is appropriate for
+students in this class to have high-level conversations about the assignment, it is necessary to distinguish carefully between the
+student who discusses the principles underlying a problem with others and the student who produces assignments that are identical
+to, or merely variations on, someone else's work.  As such, deliverables that are nearly identical to the work of others will be
+taken as evidence of violating the \mbox{Honor Code}.  
 
 
 
