--- a/labs/lab2/cs440S2014-lab2.tex
+++ b/labs/lab2/cs440S2014-lab2.tex
@@ -22,28 +22,28 @@ For this laboratory assignment you should implement a file system traversal tool
 want to use a different programming language should first see the instructor before starting their implementation). Your program
 should use the JCommander command-line argument parsing tool, available for download from \url{http://jcommander.org/}, to accept
 as input all of the appropriate arguments. The tool should start at the directory specified by the user and then recursively
-traverse the file system until it either recursively visits all of files and directories or it recursively visits up to a
-chosen maximum number of files and directories. Students should consider using the methods provides by the {\tt java.io.File}
-class to perform \mbox{the traversal}.
+traverse the file system until it either visits all of files and directories or it visits up to a chosen maximum number of files
+and directories. Students should consider using the methods provides by the {\tt java.io.File} class to perform \mbox{the
+  traversal}.
 
 Your file system traversal program should be able to calculate the minimum, maximum, and average size of the files that are
 accessible by recursive traversal from the specified root directory. The program should also be able to report the total number of
 files that it analyzed.  In addition to determining the depth and breadth of the file system subject to analysis, the tool should
-also output how long it took to perform the traversal. Students can earn extra credit if their traversal program can produce a
-visualization of the file system using a program like Graphviz.
+also output how long it took to perform the traversal. Students can earn extra credit if their traversal program produces a
+full-featured visualization of the file system using a program like Graphviz.
 
 \section*{Experimental Study}
 
 Upon completing your file system traversal tool, you should use it to analyze at least five distinct regions of your file system.
 Your analysis should investigate all of the metrics that your tool is able to calculate (e.g., file size and the characteristics
-of the file system tree). Students should ensure that their analysis uses large representative file system regions so that the results
-are as generalizable as is possible. That is, for the purposes of this assignment, you need to run your analysis tool of directory
-structures that contain hundreds, or even thousands, of files. You should also use your tool to determine the size of an empty
-file on the file system and the size of the Java program that you wrote to perform the traversal.
+of the file system tree). Students should ensure that their analysis uses large representative file system regions so that the
+results are as generalizable as is possible. That is, for the purposes of this assignment, you need to run your analysis tool of
+directory structures that contain hundreds, or even thousands, of files. You should also use your tool to determine both the size
+of an empty file on the file system and the size of the Java program that you wrote to perform the traversal.
 
-The results from your experimental study should be provided in a written report that uses graphs and tables of data for
-summarization purposes. Whenever possible, your report should explain how your results may influence the design and implementation
-of future file systems.
+The results from your experimental study should be furnished in a written report that uses graphs and tables of data for
+summarization purposes. Whenever possible, your report should explain how your results might influence the design and
+implementation of future file systems.
 
 \section*{Summary of the Required Deliverables}
 
