Finished making all of the marked changes for the second lab.

--- a/labs/lab2/cs440S2014-lab2.tex
+++ b/labs/lab2/cs440S2014-lab2.tex
@@ -49,15 +49,15 @@ implementation of future file systems.
 
 This assignment invites you to submit printed and signed versions of the following deliverables: 
 
-\begin{enumerate}
-  \item The source code of the file system traversal tool that you implemented in the Java language
-  \item The output of the file system traversal tool when run on several small file system regions
-  \item The report from an experimental study that characterizes the use of the Linux file system
-\end{enumerate}
+  \begin{enumerate}
+    \item The source code of the file system traversal tool that you implemented in the Java language
+    \item The output of the file system traversal tool when run on several small file system regions
+    \item The report from an experimental study that characterizes the use of the Linux file system
+  \end{enumerate}
 
 Students are strongly encouraged to write their laboratory report in \LaTeX~and use tools such as the R language for statistical
-computation and the Graphviz tool to better view and understand the empirical results. Please see the instructor if you have
-questions about these deliverables.
+computation and Graphviz to better view and understand the empirical results. Please see the instructor if you have questions
+about these deliverables.
 
 In adherence to the honor code, students should complete this assignment on an individual basis. While it is appropriate for
 students in this class to have high-level conversations about the assignment, it is necessary to distinguish carefully between the
