Stopped using the word "able" to describe a computer program.

--- a/labs/lab2/cs440S2014-lab2.tex
+++ b/labs/lab2/cs440S2014-lab2.tex
@@ -26,10 +26,10 @@ traverse the file system until it either visits all of files and directories or 
 and directories. Students should consider using the methods provides by the {\tt java.io.File} class to perform \mbox{the
   traversal}.
 
-Your file system traversal program should be able to calculate the minimum, maximum, and average size of the files that are
+Your file system traversal program should have features to calculate the minimum, maximum, and average size of the files that are
 accessible by recursive traversal from the specified root directory. The program should also be able to report the total number of
 files that it analyzed.  In addition to determining the depth and breadth of the file system subject to analysis, the tool should
-also output how long it took to perform the traversal. Students can earn extra credit if their traversal program produces a
+output how long it took to perform the traversal. Students can earn extra credit if their traversal program produces a
 full-featured visualization of the file system using a program like Graphviz.
 
 \section*{Experimental Study}
