--- a/labs/lab2/cs440S2014-lab2.tex
+++ b/labs/lab2/cs440S2014-lab2.tex
@@ -37,7 +37,7 @@ full-featured visualization of the file system using a program like Graphviz.
 Upon completing your file system traversal tool, you should use it to analyze at least five distinct regions of your file system.
 Your analysis should investigate all of the metrics that your tool is able to calculate (e.g., file size and the characteristics
 of the file system tree). Students should ensure that their analysis uses large representative file system regions so that the
-results are as generalizable as is possible. That is, for the purposes of this assignment, you need to run your analysis tool of
+results are as generalizable as is possible. That is, for the purposes of this assignment, you need to run your analysis tool on
 directory structures that contain hundreds, or even thousands, of files. You should also use your tool to determine both the size
 of an empty file on the file system and the size of the Java program that you wrote to perform the traversal.
 
