--- a/labs/lab3/cs440S2014-lab3.tex
+++ b/labs/lab3/cs440S2014-lab3.tex
@@ -10,40 +10,16 @@
 
 \section*{Introduction}
 
-The file system is one of the most heavily used components of an operating system.  Figure~1-14 in your textbook shows a
-visualization of a file system that starts at the root directory and branches out to additional directories and files.
-Programming languages like Java and C provide libraries that support the traversal of a file system and the analysis of individual
-files and directories. In this laboratory assignment, you will implement your own file system traversal tool and use it to learn
-more about the characteristics of the file system used by the Linux operating system.
+Processes and threads are commonly used by the operating system itself and the programs that run on the operating system.  In this
+laboratory assignment, you will download, use, extend, and experiment with a multi-threaded producer-consumer model.  The
+producer-consumer model, sometimes known as the bounded-buffer model, illustrates non-deterministic execution of threads that
+share a common, fixed-size buffer.  In this assignment, you will download and use a working version of this model.  Then, you will
+add some features to the model to enable you to experiment with it more effectively.  Finally, you will systematically break
+various parts of the model in order to observe what can go wrong when implementing multi-threaded programs.
 
 \section*{File System Traversal}
 
-For this laboratory assignment you should implement a file system traversal tool in the Java programming language (students who
-want to use a different programming language should first see the instructor before starting their implementation). Your program
-should use the JCommander command-line argument parsing tool, available for download from \url{http://jcommander.org/}, to accept
-as input all of the appropriate arguments. The tool should start at the directory specified by the user and then recursively
-traverse the file system until it either visits all of files and directories or it visits up to a chosen maximum number of files
-and directories. Students should consider using the methods provides by the {\tt java.io.File} class to perform \mbox{the
-  traversal}.
-
-Your file system traversal program should have features to calculate the minimum, maximum, and average size of the files that are
-accessible by recursive traversal from the specified root directory. The program should also be able to report the total number of
-files that it analyzed.  In addition to determining the depth and breadth of the file system subject to analysis, the tool should
-output how long it took to perform the traversal. Students can earn extra credit if their traversal program produces a
-full-featured visualization of the file system using a program like Graphviz.
-
 \section*{Experimental Study}
-
-Upon completing your file system traversal tool, you should use it to analyze at least five distinct regions of your file system.
-Your analysis should investigate all of the metrics that your tool is able to calculate (e.g., file size and the characteristics
-of the file system tree). Students should ensure that their analysis uses large representative file system regions so that the
-results are as generalizable as is possible. That is, for the purposes of this assignment, you need to run your analysis tool on
-directory structures that contain hundreds, or even thousands, of files. You should also use your tool to determine both the size
-of an empty file on the file system and the size of the Java program that you wrote to perform the traversal.
-
-The results from your experimental study should be furnished in a written report that uses graphs and tables of data for
-summarization purposes. Whenever possible, your report should explain how your results might influence the design and
-implementation of future file systems.
 
 \section*{Summary of the Required Deliverables}
 
