Fixed the paragraph about running the Git clone command. Better now.

--- a/labs/lab3/cs440S2014-lab3.tex
+++ b/labs/lab3/cs440S2014-lab3.tex
@@ -37,15 +37,15 @@ additional information about the use of Git and Bitbucket: \url{https://confluen
     make sure that you use your {\tt allegheny.edu} email address so that you can create an unlimited number of free
     Bitbucket repositories. Then, upload your ssh key to Bitbucket.
 
-  \item Now, you need to test to see if you can authenticate with the Bitbucket servers.  First, show the course
-    instructor that you have correctly configured your Bitbucket account.  Now, ask the instructor to share the course's
-    Git repository with you.  Open a terminal window on your workstation and change into the directory where you will
-    store your files for this course.  For instance, you might make a {\tt cs112S2014/} directory that will contain the
-    Git repository that I will always use to share files with you.  Once you have done so, please type the following
-    command: {\tt git clone git@bitbucket.org:gkapfham/cs112s2014-share.git}.  If everything worked correctly, you
-    should be able to download all of the files that you will need to use for this laboratory assignment. Please resolve
-    any problems that you encountered by first reviewing the Bitbucket documentation and then discussing the matter
-    with your team. If you are still not able to run the {\tt git clone} command, then please see the instructor.
+  \item Now, you need to test to see if you can authenticate with the Bitbucket servers.  First, show the course instructor that
+    you have correctly configured your Bitbucket account.  Now, ask the instructor to share the course's Git repository with you.
+    Open a terminal window on your workstation and change into the directory where you will store your files for this course.  For
+    instance, you might have made a {\tt cs440S2014/} directory that will contain the Git repository that I will always use to
+    share files with you.  Once you have done so and only after I have shared the Git repository with you, please type the
+    following command: {\tt git clone git@bitbucket.org:gkapfham/cs440s2014-share.git}.  If everything worked correctly, you
+    should be able to download all of the files that you will need to use for this laboratory assignment. Please resolve any
+    problems that you encountered by first reviewing the Bitbucket documentation and then discussing the matter with your team. If
+    you are still not able to run the {\tt git clone} command, then please see the instructor.
 
   \item Using your terminal window, you should browse the files that are in this Git repository.  In particular, please
     look in the {\tt labs/lab1/src/} directory and use Vim to study the two Java programs that you find.  Remember, the
