Adding in the content about getting access to the source code.

--- a/labs/lab3/cs440S2014-lab3.tex
+++ b/labs/lab3/cs440S2014-lab3.tex
@@ -17,7 +17,7 @@ share a common, fixed-size buffer.  In this assignment, you will download and us
 add some features to the model to enable you to experiment with it more effectively.  Finally, you will systematically break
 various parts of the model in order to observe what can go wrong when implementing multi-threaded programs.
 
-\section*{Configuring Git and Bitbucket}
+\section*{Accessing the Producer-Consumer Model}
 
 During this laboratory assignment, and some subsequent assignments, we will securely communicate with the Bitbucket.org servers
 that will host the source code for our assignment. Students who are already comfortable with using Git and Bitbucket may skip the
@@ -47,18 +47,17 @@ additional information about the use of Git and Bitbucket: \url{https://confluen
     problems that you encountered by first reviewing the Bitbucket documentation and then discussing the matter with your team. If
     you are still not able to run the {\tt git clone} command, then please see the instructor.
 
-  \item Using your terminal window, you should browse the files that are in this Git repository.  In particular, please
-    look in the {\tt labs/lab1/src/} directory and use Vim to study the two Java programs that you find.  Remember, the
-    {\tt cd} command allows you to change into a directory. 
+  \item Using your terminal window, you should browse the files that are in this Git repository.  In particular, please look in
+    the {\tt labs/lab3/src/} directory and use Vim to study the two Java programs that you find. What files are available for the
+    Producer-Consumer model?
 
 \end{enumerate}
 
-
-\section*{Accessing the Producer-Consumer Model}
-
+\section*{Using and Extending the Producer-Consumer Model}
 
 
-\section*{Experimental Study}
+
+\section*{Experimental Study of Performance}
 
 \section*{Summary of the Required Deliverables}
 
