--- a/labs/lab3/cs440S2014-lab3.tex
+++ b/labs/lab3/cs440S2014-lab3.tex
@@ -55,12 +55,12 @@ additional information about the use of Git and Bitbucket: \url{https://confluen
 
 \section*{Understanding and Extending the Producer-Consumer Model}
 
-After you have carefully studied the source code of the Producer-Consumer model, you should compile and execute it.  What type of
+After you have carefully studied the source code of the Producer-Consumer model, you can compile and execute it.  What type of
 output does this program produce?  Will this program halt?  If yes, then how long will it take to halt?  If no, then why does it
 not halt? Finally, you should use the {\tt /usr/bin/time} program to time how long it takes to run the Producer-Consumer.
 
 In order to better understanding how this program works, you should run it and then use the {\tt ps -eLf} and {\tt ps aux}
-commands to track what Java processes are started when the model executes. You should also use the {\tt gnome-system-monitor} to
+commands to track what Java processes are started when the model executes. You can also use the {\tt gnome-system-monitor} to
 learn more about this program's behavior (to run this program you can type {\tt monitor} in the Unity dash).  To the best of your
 ability, you should use these three programs --- and any others that you deem to be useful and relevant --- to better understand
 how the Producer-Consumer model creates processes and/or threads.
@@ -72,8 +72,42 @@ possible to specify whether or not debugging output must be produced, the number
 and the total number of consumers.  Details about the command-line arguments are provided in the comments of the {\tt
 ProducerConsumerModel.java} file. 
 
+\section*{Understanding Defects in Multi-Threaded Programs}
+
+After you have finished writing the source code to support the command-line arguments for the Producer-Consumer model, you can
+take steps to systematically explore what happens if you make mistakes when implementing multi-threaded Java programs. Please
+ensure that you carefully make the following changes, recompile the program, execute the program, record the incorrect program
+output, and comment on why the output is evident.  Once you are done making the required defective implementations of the program,
+please return the modified class to the correct state!
+
+\begin{enumerate}
+
+  \item For the {\tt get} and {\tt put} methods inside of the {\tt CubbyHole}, systematically add a new method signature that does
+    not declare a method to be {\tt synchronized}.  That is, you should first run the {\tt ProducerConsumerModel} with just the
+    incorrect {\tt get}, then with just the incorrect {\tt put}, and finally with both the wrong {\tt get} and {\tt put}.   What
+    does the output of the defective {\tt ProducerConsumerModel} look like?  How can you explain this output?  
+
+  \item Now, keep the version of the {\tt get} and {\tt put} methods that do not use the {\tt synchronized} keyword and
+    separately comment out the {\tt while} loop in both of the {\tt get} and {\tt put} methods.  Finally, you should separately
+    comment out the call to the {\tt notifyAll} method at the end of both of these methods. What does the output of each of these
+    {\tt ProducerConsumerModel}s look like? Can you explain why these defects produce this output?
+
+\end{enumerate}
+
 \section*{Experimental Study of Performance}
 
+  Now, you should use the {\em correct} implementation of the {\tt ProducerConsumerModel} to conduct an experiment.  You should
+  measure the time overhead that is required to consume 10, 100, 1000, and 10,000 different data items for three different numbers
+  of consumers.  For example, you might use two, four, and eight different consumer threads for all of the different number of
+  data items.  You should conduct each individual experiment at least five times in order to facilitate the calculation of
+  arithmetic means.  After making sure that your timings do not include the cost associated with performing console output, you
+  should collect execution timings of the {\tt ProducerConsumerModel}.  
+
+  In preparation for writing your report, you may calculate arithmetic means by writing your own Java program or by using the R
+  language for statistical computing.  Moreover, your report should explain your experimental goals and design by clearly
+  describing the commands that you type and the order in which they were typed.  You report should also include tables of results
+  that furnish the running times for each of the different {\tt ProducerConsumerModel} configurations.  
+  
 \section*{Summary of the Required Deliverables}
 
 This assignment invites you to submit printed and signed versions of the following deliverables: 
