Finished the first draft of the content about the deliverables.

--- a/labs/lab3/cs440S2014-lab3.tex
+++ b/labs/lab3/cs440S2014-lab3.tex
@@ -103,8 +103,8 @@ please return the modified class to the correct state!
   arithmetic means.  After making sure that your timings do not include the cost associated with performing console output, you
   should collect execution timings of the {\tt ProducerConsumerModel}.  
 
-  In preparation for writing your report, you may calculate arithmetic means by writing your own Java program or by using the R
-  language for statistical computing.  Moreover, your report should explain your experimental goals and design by clearly
+  In preparation for writing your report, you may calculate arithmetic means by implementing your own Java program or by using the
+  R language for statistical computing.  Moreover, your report should explain your experimental goals and design by clearly
   describing the commands that you type and the order in which they were typed.  You report should also include tables of results
   that furnish the running times for each of the different {\tt ProducerConsumerModel} configurations.  
   
@@ -113,9 +113,10 @@ please return the modified class to the correct state!
 This assignment invites you to submit printed and signed versions of the following deliverables: 
 
   \begin{enumerate}
-    \item The source code of the file system traversal tool that you implemented in the Java language
-    \item The output of the file system traversal tool when run on several small file system regions
-    \item The report from an experimental study that characterizes the use of the Linux file system
+    \item A one paragraph discussion of how multi-threaded Java programs use {\tt synchronized} 
+    \item A detailed discussion of the execution behavior of a multi-threaded Java program
+    \item A comprehensive analysis of the output of each defective multi-threaded Java program
+    \item The report from an experimental study that characterizes the performance of the model 
   \end{enumerate}
 
 Students are strongly encouraged to write their laboratory report in \LaTeX~and use tools such as the R language for statistical
