Fixed the mistakes about the format of the model name.

--- a/labs/lab3/cs440S2014-lab3.tex
+++ b/labs/lab3/cs440S2014-lab3.tex
@@ -55,15 +55,15 @@ additional information about the use of Git and Bitbucket: \url{https://confluen
 
 \section*{Understanding and Extending the Producer-Consumer Model}
 
-After you have carefully studied the source code of the Producer-Consumer model, you can compile and execute it.  What type of
+After you have carefully studied the source code of the producer-consumer model, you can compile and execute it.  What type of
 output does this program produce?  Will this program halt?  If yes, then how long will it take to halt?  If no, then why does it
-not halt? Finally, you should use the {\tt /usr/bin/time} program to time how long it takes to run the Producer-Consumer.
+not halt? Finally, you should use the {\tt /usr/bin/time} program to time how long it takes to run the {\tt ProducerConsumer}.
 
 In order to better understanding how this program works, you should run it and then use the {\tt ps -eLf} and {\tt ps aux}
 commands to track what Java processes are started when the model executes. You can also use the {\tt gnome-system-monitor} to
 learn more about this program's behavior (to run this program you can type {\tt monitor} in the Unity dash).  To the best of your
 ability, you should use these three programs --- and any others that you deem to be useful and relevant --- to better understand
-how the ProducerConsumerModel creates processes and/or threads.
+how the {\tt ProducerConsumerModel} creates processes and/or threads.
 
 \begin{sloppypar}
   As you will see from studying the source code, the current implementation of the {\tt ProducerConsumerModel} has several
